<resources>
    <string name="app_name">AgriGuide</string>
    <string name="please_login_to_continue_using_our_app">please login to continue using our app</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="text_example"><font size="15">Enter your email</font></string>
    <string name="text_example2"><font size="15">Enter your password</font></string>
    <string name="remember_me">Remember me</string>
    <string name="forgot">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet ?</string>
    <string name="agri_guide">Agri Guide</string>


    <!--    sign Up-->

    <string name="username">Username</string>
    <string name="fname">first name</string>
    <string name="lname">last name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="Contact">Contact</string>
    <string name="sign_in">Sign in</string>

    <!--    sign Up-->

    <string name="serachhint"><i>search for support</i></string>


    <!--    home-->

    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="report">Report</string>
    <string name="profile">me</string>
    <string name="v2">v2</string>
    <string name="Report_demo">Report demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    home-->

    <string name="TheamCondition">Terms &amp; Conditions</string>
    <string name="Vegitables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="Seed">Seeds</string>
    <string name="other">Others</string>
    <string name="viewreport">Add Guide</string>
    <string name="addreport">Add Report</string>
    <string name="getstart">Get Start</string>
    <string name="Continue" />
    <string name="logout">Log Out</string>
    <string name="comment">Enter Your Comment</string>

</resources>
